# workshop_estrut

./: README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: extract.py  load.py  transforme.py
data/output/: output.xlsx
docs/: index.md
tests/: test_pipeline.py
