[tool.poetry]
name = "workshop-estrut"
version = "0.1.0"
description = "Projeto de ETL - consolidando arquivos Excel"
authors = ["Mariangela Crispim <mmcrispim@yahoo.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
