[tool.poetry]
name = "workshop-estrut"
version = "0.1.0"
description = "Projeto de ETL - consolidando arquivos Excel"
authors = ["Mariangela Crispim <mmcrispim@yahoo.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"
isort = "^5.13.2"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.2"
mkdocs = "^1.5.3"
taskipy = "^1.12.2"
mkdocstrings-python = "^1.9.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.14"
pymdown-extensions = "^10.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]

format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python3 app/main.py"
kill = "kill -9 $(lsof -t -i: 8000)"